ingress-instance-manager/templates/full-os-challenge-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: challenge-pod
  labels:
    app: challenge
spec:
  containers:
  - name: challenge-container
    image: registry.rydersel.cloud/debiantest   # Gets overwritten anyway
    ports:
    - containerPort: 22
      name: ssh
    securityContext:
      runAsUser: 0  # Run as root user
      privileged: false
  - name: bridge
    image: registry.rydersel.cloud/bridge
    ports:
    - containerPort: 5000
      name: http
  - name: webos
    image: registry.rydersel.cloud/webos
    ports:
    - containerPort: 3000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
spec:
  selector:
    app: challenge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000  # Expose the WebOS container
  type: ClusterIP  # Changed to ClusterIP for internal routing
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: challenge.rydersel.cloud  # This will be replaced dynamically
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: challenge-service
            port:
              number: 80
