ingress-instance-manager/templates/metasploit-challenge-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: metasploit-challenge-pod
  labels:
    app: metasploit-challenge
spec:
  serviceAccountName: terminal-account
  containers:
  - name: attack-container
    image: registry.rydersel.cloud/metasploit-attack
    ports:
    - containerPort: 4444
      name: msf
    securityContext:
      privileged: false
  - name: defence-container
    image: registry.rydersel.cloud/vulnerable-target
    ports:
    - containerPort: 5000
      name: http
    - containerPort: 22
      name: ssh
    securityContext:
      privileged: false
  - name: webos
    image: registry.rydersel.cloud/webos
    ports:
    - containerPort: 3000
      name: webos-http
  - name: terminal
    image: registry.rydersel.cloud/terminal
    ports:
    - containerPort: 3001
      name: terminal-http
---
apiVersion: v1
kind: Service
metadata:
  name: metasploit-challenge-service
spec:
  selector:
    app: metasploit-challenge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: webos-http
  - protocol: TCP
    port: 3001
    targetPort: 3001
    name: terminal-http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/websocket-services: "challenge-service"
  #  cert-manager.io/cluster-issuer: "cert-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - instance-name.rydersel.cloud
    - terminal-instance-name.rydersel.cloud
    secretName: wildcard-domain-certificate-prod
  rules:
  - host: instance-name.rydersel.cloud
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: metasploit-challenge-service
            port:
              number: 80
  - host: terminal-instance-name.rydersel.cloud
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: metasploit-challenge-service
            port:
              number: 3001
